--- a/sass/layouts/_grids.scss
+++ b/sass/layouts/_grids.scss
@@ -49,7 +49,18 @@
 
   /* 타블렛 */
 
-  @media screen and (min-width: $md-breakpoint) {
+  // @media screen and (min-width: $md-breakpoint) {
+  //   max-width: $md-max-container;
+  //   padding: 0 $md-margin;
+
+  //   @for $i from 1 through $md-columns {
+  //     .col-md-#{$i} {
+  //       width: math.div($i, $md-columns) * 100%;
+  //     }
+  //   }
+  // }
+
+  @include responsive(T) {
     max-width: $md-max-container;
     padding: 0 $md-margin;
 
@@ -61,7 +72,18 @@
   }
 
   /* 데스크탑 */
-  @media screen and (min-width: $lg-breakpoint) {
+  // @media screen and (min-width: $lg-breakpoint) {
+  //   max-width: $lg-max-container;
+  //   padding: 0;
+
+  //   @for $i from 1 through $lg-columns {
+  //     .col-lg-#{$i} {
+  //       width: ($lg-unit + $gutter) * $i;
+  //     }
+  //   }
+  // }
+
+  @include responsive(D) {
     max-width: $lg-max-container;
     padding: 0;
 
