gnb 아이콘 margin 수정

--- a/sass/layouts/_gnb.scss
+++ b/sass/layouts/_gnb.scss
@@ -16,5 +16,11 @@
     @include flexbox(between);
     width: 100%;
     height: 70px;
+
+    .gnb-right {
+      button:first-child {
+        margin-right: 8px;
+      }
+    }
   }
 }
