--- a/sass/layouts/_gnb.scss
+++ b/sass/layouts/_gnb.scss
@@ -1,25 +1,121 @@
-.gnb-mobile {
-  position: relative;
-  width: 100vw;
-  height: 70px;
-  background-color: $primary;
+.gnb {
+  &-mobile {
+    position: relative;
+    width: 100vw;
+    height: 70px;
+    background-color: $primary;
 
-  .logo {
-    img {
-      @include position-center;
-      // display: block;
-      width: 45px;
+    .logo {
+      img {
+        @include position-center;
+        // display: block;
+        width: 45px;
+      }
+    }
+
+    .gnb-wrapper {
+      @include flexbox(between);
+      width: 100%;
+      height: 70px;
+
+      .gnb-right {
+        button:first-child {
+          margin-right: 8px;
+        }
+      }
     }
   }
 
-  .gnb-wrapper {
-    @include flexbox(between);
-    width: 100%;
-    height: 70px;
+  @include responsive(T) {
+    &-desktop {
+      // height: 120px;
+      background-color: $primary;
+      color: $white;
 
-    .gnb-right {
-      button:first-child {
-        margin-right: 8px;
+      .gnb-wrapper {
+        @include flexbox;
+        position: relative;
+
+        .logo {
+          position: absolute;
+          left: 0;
+
+          img {
+            display: block;
+            width: 75px;
+          }
+        }
+
+        .gnb-menu-wrapper {
+          width: 100%;
+
+          .gnb-top {
+            @include flexbox(end, center);
+            height: 50px;
+            border: 1px solid red;
+
+            .gnb-list {
+              @include flexbox;
+              margin-right: 16px;
+
+              .gnb-item {
+                margin-right: 16px;
+
+                &:last-child {
+                  margin-right: 0;
+                }
+
+                &:after {
+                  content: "|";
+                  margin-left: 16px;
+                }
+
+                &:last-child::after {
+                  content: "";
+                  margin-left: 0;
+                }
+              }
+            }
+
+            .icon-search {
+              // display: none;
+            }
+
+            .input-wrapper {
+              display: none;
+
+              input {
+                width: 144px;
+                height: 30px;
+                background-color: $white;
+                border-radius: 4px;
+                padding-left: 8px;
+                margin-right: 4px;
+              }
+
+              button {
+                height: 30px;
+                padding: 0 16px;
+                color: $white;
+                background-color: $green;
+                border-radius: 4px;
+                border: 2px solid transparent;
+
+                &:active {
+                  border: 2px solid $white;
+                }
+              }
+            }
+          }
+          .gnb-bottom {
+            height: 70px;
+            border: 1px solid yellow;
+
+            .gnb-list {
+              @include flexbox;
+            }
+          }
+        }
       }
     }
   }
