gnb-bottom에 transition 추가

--- a/sass/layouts/_gnb.scss
+++ b/sass/layouts/_gnb.scss
@@ -124,6 +124,7 @@
               .gnb-item {
                 margin-right: 25px;
                 text-align: center;
+                transition: all 200ms ease-in-out;
 
                 &:last-child {
                   margin-right: 0;
