--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,5 @@
+@import "./base/fonts";
+
 @import "./constants/colors";
 @import "./constants/typography";
 @import "./constants/breakpoints";
@@ -15,3 +17,7 @@
 
 @import "./layouts/grids";
 @import "./layouts/gnb";
+
+@import "./components/main-banner";
+
+@import "./modules/buttons.scss";
