gnb-mobile 아이콘 교체

--- a/sass/layouts/_gnb.scss
+++ b/sass/layouts/_gnb.scss
@@ -18,6 +18,15 @@
       width: 100%;
       height: 70px;
 
+      i {
+        font-size: 32px;
+        color: $white;
+
+        &:active {
+          color: $green;
+        }
+      }
+
       .gnb-right {
         button:first-child {
           margin-right: 8px;
