--- a/sass/layouts/_gnb.scss
+++ b/sass/layouts/_gnb.scss
@@ -91,8 +91,14 @@
               }
             }
 
-            .icon-search {
-              // display: none;
+            i {
+              font-size: 24px;
+              color: $white;
+              transition: all 200ms ease-in-out;
+
+              &:hover {
+                color: $green;
+              }
             }
 
             .input-wrapper {
