--- a/sass/main.scss
+++ b/sass/main.scss
@@ -17,7 +17,11 @@
 
 @import "./layouts/grids";
 @import "./layouts/gnb";
-
-@import "./components/main-banner";
+@import "./layouts/main-banner";
+@import "./layouts/sidebar";
+@import "./layouts/overlay";
 
 @import "./modules/buttons.scss";
+
+@import "./components/sidebar-input";
+@import "./components/gnb-dropdown-menu";
