--- a/sass/layouts/_gnb.scss
+++ b/sass/layouts/_gnb.scss
@@ -1,4 +1,10 @@
 .gnb {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  width: 100%;
+
   &-mobile {
     position: relative;
     width: 100vw;
