--- a/sass/layouts/_overlay.scss
+++ b/sass/layouts/_overlay.scss
@@ -4,7 +4,7 @@
   left: 0;
   z-index: 1;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-color: rgba($primary, 0.5);
   opacity: 0;
   visibility: hidden;
