--- a/sass/layouts/_sidebar.scss
+++ b/sass/layouts/_sidebar.scss
@@ -6,13 +6,13 @@
 }
 
 .sidebar {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 300px;
-  height: 100vh;
+  height: 100%;
   background-color: $primary;
-  z-index: 2;
+  z-index: 20;
   color: $white;
   border-right: 1px solid $secondary;
   overflow-y: scroll;
