category section 스타일링

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -20,6 +20,7 @@
 @import "./layouts/main-banner";
 @import "./layouts/sidebar";
 @import "./layouts/overlay";
+@import "./layouts/category";
 
 @import "./modules/buttons.scss";
 
