--- a/sass/layouts/_main-banner.scss
+++ b/sass/layouts/_main-banner.scss
@@ -160,7 +160,7 @@
     }
   }
 
-  @media screen and (max-height: 809px) {
+  @media screen and (min-height: 568px) and (max-height: 809px) {
     .title-wrapper {
       transition-delay: 300ms;
     }
