--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,6 +6,7 @@
 @import "./constants/box-shadow";
 @import "./constants/grids";
 @import "./constants/section-padding";
+@import "./constants/z-index";
 
 @import "./base/normalize";
 @import "./base/reset";
@@ -25,6 +26,7 @@
 @import "./layouts/category";
 @import "./layouts/section-coffee-bean";
 @import "./layouts/section-card";
+@import "./layouts/section-menu";
 
 @import "./modules/buttons.scss";
 
