--- a/sass/layouts/_sidebar.scss
+++ b/sass/layouts/_sidebar.scss
@@ -12,7 +12,7 @@
   width: 300px;
   height: 100%;
   background-color: $primary;
-  z-index: 20;
+  z-index: $sidebar-level;
   color: $white;
   border-right: 1px solid $secondary;
   overflow-y: scroll;
