--- a/sass/main.scss
+++ b/sass/main.scss
@@ -26,7 +26,7 @@
 @import "./layouts/category";
 @import "./layouts/section-coffee-bean";
 @import "./layouts/section-card";
-@import "./layouts/section-menu";
+@import "./layouts/section-best-menu";
 
 @import "./modules/buttons.scss";
 
