section campaign 스타일링

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -27,6 +27,7 @@
 @import "./layouts/section-coffee-bean";
 @import "./layouts/section-card";
 @import "./layouts/section-best-menu";
+@import "./layouts/section-campaign";
 
 @import "./modules/buttons.scss";
 
