--- a/sass/main.scss
+++ b/sass/main.scss
@@ -28,6 +28,8 @@
 @import "./layouts/section-card";
 @import "./layouts/section-best-menu";
 @import "./layouts/section-campaign";
+@import "./layouts/section-event";
+@import "./layouts/footer";
 
 @import "./modules/buttons.scss";
 
